content/terraform-plugin-sdk/v2.36.x/docs/plugin/sdkv2/resources/index.mdx
---
page_title: Resources - Guides
description: >-
  Resources are a key component to provider development. Learn to use advanced
  resource APIs.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-06T10:49:53-05:00
# END AUTO GENERATED METADATA
---

# Resources

A key component to Terraform Provider development is defining the creation, read, update, and deletion functionality of a resource to map those API operations into the Terraform lifecycle. While the [Call APIs with Terraform Providers tutorial](/terraform/tutorials/providers?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) and [Schemas documentation](/terraform/plugin/sdkv2/schemas) cover the basic aspects of developing Terraform resources, this section covers more advanced features of resource development.

## Import

Many operators migrating to Terraform will have previously existing infrastructure they want to bring under the management of Terraform. Terraform allows resources to implement [Import Support](/terraform/plugin/sdkv2/resources/import) to begin managing those existing infrastructure components.

## Retries and Customizable Timeouts

The reality of cloud infrastructure is that it typically takes time to perform operations such as booting operating systems, discovering services, and replicating state across network edges. Terraform implements functionality to retry API requests or specifically declare state change criteria, while allowing customizable timeouts for operators. More information can be found in the [Retries and Customizable Timeouts section](/terraform/plugin/sdkv2/resources/retries-and-customizable-timeouts).

## Customizing Differences

Terraform tracks the state of provisioned resources in its state file, and compares the user-passed configuration against that state. When Terraform detects a discrepancy, it presents the user with the differences between the configuration and the state. Sometimes these scenarios require special handling, which is where [Customizing Differences](/terraform/plugin/sdkv2/resources/customizing-differences) can help.

## Data Consistency Errors

Terraform has data consistency rules for resources, which may not be easily discovered for resources using this SDK, but problematic for practitioners in their workflow or provider developers when the resource is being [migrated to terraform-plugin-framework](/terraform/plugin/framework/migrating). The [Data Consistency Errors](/terraform/plugin/sdkv2/resources/data-consistency-errors) page discusses the causes for these issues, how to discover them, and how to potentially resolve them.

## State Migrations

Resources define the data types and API interactions required to create, update, and destroy infrastructure with a cloud vendor, while the [Terraform state](/terraform/language/state) stores mapping and metadata information for those remote objects.

When resource implementations change (due to bug fixes, improvements, or changes to the backend APIs Terraform interacts with), they can sometimes become incompatible with existing state. When this happens, a migration is needed for resources provisioned in the wild with old schema configurations. Terraform resources support migrating state values in these scenarios via [State Migration](/terraform/plugin/sdkv2/resources/state-migration).

## Write-only Arguments

~> **NOTE:** Write-only arguments are only supported in Terraform `v1.11` or higher

Write-only arguments are a special type of managed resource attribute
that are configured by practitioners but are not persisted in the Terraform plan or state artifacts.
Write-only arguments can accept [ephemeral values](/terraform/language/resources/ephemeral) and are not required to be consistent between plan and apply operations.
The [Write-only arguments](/terraform/plugin/sdkv2/resources/write-only-arguments) page discusses how to create these arguments.